--- a/exindex.html
+++ b/exindex.html
@@ -50,7 +50,7 @@
             <div class="mb-3">
                 <label for="password" class="form-label">Mot de passe</label>
                 <input type="password" class="form-control" id="password">
-                <p class="errors" id="passwordError pt-3">Message d'erreur</p>
+                <p class="errors" id="passwordError">Message d'erreur</p>
             </div>
 
             <!-- Confirmer le mot de passe -->
