--- a/exindex.html
+++ b/exindex.html
@@ -60,6 +60,11 @@
             </div>
                 <p class="errors" id="passwordError">Message d'erreur</p>
             </div>
+            <!--générer un mot de passe-->
+            <div id="generatePwd" class="d-flex align-items flex-row justify-content-center">
+                <a href="#" id="generatePwd">Générer un mot de passe</a>
+                <p id="resultPassword" class="pt-3 text-secondary"></p>
+            </div>
 
             <!-- Confirmer le mot de passe -->
             <div class="mb-3">
@@ -76,7 +81,6 @@
                 </div>
                 <p class="errors" id="confirmPasswordError">Message d'erreur</p>
             </div>
-            
             <button type="submit" class="btn btn-primary">Valider les informations</button>
           </form>
     </div>
